<resources>
    <string name="app_name">E-Tech-News</string>


    <string name="first_title">E-Tech News</string>
    <string name="first_description">Read news From different vendors</string>
    <string name="second_description">Add Vendors to library</string>
    <string name="third_description">Simless subscription</string>
    <string name="library">Library</string>
    <string name="settings">Settings</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="search">Search</string>
    <string name="vendor">Vendors</string>

    <string name="title_list_to_grid">List to grid</string>

    <string name="facebook_app_id">710404902495153</string>

    <string name="label_button_cta_canteen_intro">GET STARTED</string>


    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Phone Number</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>
    <string name="dummy">Of course, some code must have been written to govern the behaviors of the widgets and Views in our samples above. The CoordinatorLayout automatically does all this already. However, you might want to define your own reactions and behaviors, rather than use the default and standard behaviors. It is remarkably easy to do. The complexity lies in how unique a behavior you want, and not in implementing a behavior. Our custom behavior is really simple. From the FabFollowsWidget sample above, we want the CircleImageView to grow larger as the user scrolls to the end of the Cards.</string>
    <string name="blue_name">share name</string>
    <string name="profile">My Profile</string>
    <string name="no_value">No Value!</string>
    <string name="comments">Comments</string>
    <string name="subscribe">Subscribe</string>
    <string name="read_more">Read More</string>
    <string name="intro_title">Enter the spot</string>
    <string name="phone_number">Phone Number</string>
    <string name="have_account">Don\'t have an account? Register</string>
    <string name="enter_otp">Please enter OTP Code that has been sent to your phone through SMS</string>
    <string name="submit">Submit</string>
    <string name="account">ACCOUNT</string>
    <string name="general">GENERAL</string>
    <string name="general_notifications">General Notifications</string>
    <string name="sign_out_from">Sign out from</string>
    <string name="unsubscribe_from_all_vendors">Unsubscribe from all vendors</string>
    <string name="language">Language</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="enable_notification">Enable Notification</string>
    <string name="extend_subsciption">Extend Subsciption</string>
    <string name="unsubscribe">UnSubscribe</string>
    <string name="write_a_comment">Write a Comment</string>
    <string name="subcribe_to_vendors">Subcribe to Vendors</string>
    <string name="read_news">Read News</string>
    <string name="complete_registration_with">Connect:</string>
    <string name="no_news">No News at the moment!</string>

    <string-array name="arr">
        <item>A</item>
        <item>B</item>
        <item>C</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="resend_code">Resend Code</string>
    <string name="no_content">No Content yet!</string>
</resources>
