<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_vendor_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.simpumind.e_tech_news.activities.VendorSettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_centerVertical="true"
            android:text="@string/expiry_date"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="11/05/2017 9:34 pm"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_centerVertical="true"
            android:text="@string/enable_notification"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="0.6"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/extend_subsciption"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:layout_weight="0.3"
            android:visibility="gone"
            android:id="@+id/extend_sub"
            android:background="@color/colorIcons"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:background="#c6c4c4"
            android:layout_gravity="center"
            android:text="@string/unsubscribe"
            android:textStyle="bold"
            android:id="@+id/subscribe"
            android:layout_weight="0.3"
            android:layout_margin="5dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
