<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/transitions_container"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.simpumind.e_tech_news.activities.NewsDetailActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:background="#efeeee"
            android:layout_height="55dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="7dp"
                android:layout_alignParentStart="true">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleType="fitCenter"
                    android:id="@+id/vendorIcon"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="#181818"
                        android:id="@+id/vendorName"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:id="@+id/time"
                        android:layout_gravity="left"/>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="7dp"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/black"
                android:background="@drawable/round_corner"
                android:text="@string/subscribe"
                android:id="@+id/subscribe"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:layout_centerVertical="true"/>

        </RelativeLayout>


        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:lineSpacingExtra="3dp"
                    android:id="@+id/titleNews"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />


                <ImageView
                    android:id="@+id/toolbarImage"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:transitionName="@string/blue_name"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <at.blogc.android.views.ExpandableTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="16dp"
                        android:lines="3"
                        android:layout_marginTop="10dp"
                        android:id="@+id/description"
                        android:lineSpacingExtra="3dp"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />


                    <Button
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textColor="@color/colorAccent"
                        android:text="@string/read_more"
                        android:layout_gravity="center"
                        android:id="@+id/button_toggle"
                        android:background="@drawable/border_round_corner"/>

                </LinearLayout>


            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:id="@+id/frameLayout">

        <android.support.design.widget.FloatingActionButton
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:borderWidth="0dp"
            android:elevation="0dp"
            android:src="@drawable/ic_insert_comment_white_24dp"
            app:fabSize="normal" />

        <TextView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/round_corner"
            android:text="0"
            android:padding="1dp"
            android:id="@+id/badgeCount"
            android:gravity="center"
            android:backgroundTint="@color/tw__composer_red"
            android:elevation="7dp"/>

    </FrameLayout>






</FrameLayout>